Metric title no longer wraps to a new line if it is too long (width is set to the length of the longest title)

--- a/MHTCDashboard/src/main/webapp/css/style.css
+++ b/MHTCDashboard/src/main/webapp/css/style.css
@@ -1073,7 +1073,7 @@ i.fa.fa-info-circle {
 }
 
 #MultipleMetricTitle {
-	width: 300px;
+	width: 530px;
 	text-align: center;
 	font-size:20px;
 	font-weight: 400;
